Fixed position fix on mobile devices, and small visual changes

--- a/app/assets/stylesheets/legendopedia.css.scss
+++ b/app/assets/stylesheets/legendopedia.css.scss
@@ -15,6 +15,8 @@
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
   position: fixed;
+  /* Fixes the position fixed problem on ios and android */
+  -webkit-backface-visibility:hidden;  
 }
 i {
   display:table-cell;
@@ -50,6 +52,8 @@ i {
   margin-top: -20%;  
   position: fixed;
   display: none;
+  /* Fixes the position fixed problem on ios and android */
+  -webkit-backface-visibility:hidden;  
 }
 
 .side_panel_li {
